# Cvx_Pose

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: ICP_8cpp.html  ICP_8h.html  ICP_8h_source.html  PoseEstimate_8cpp.html  PoseEstimate_8h.html  PoseEstimate_8h_source.html  SolvePoseAnalytic_8cpp.html  SolvePoseAnalytic_8h.html  SolvePoseAnalytic_8h_source.html  SolvePoseCVX_8cpp.html  SolvePoseCVX_8h.html  SolvePoseCVX_8h_source.html  annotated.html  bunny_8cpp.html  classICP-members.html  classICP.html  classPoseEstimate-members.html  classPoseEstimate.html  classSolvePoseAnalytic-members.html  classSolvePoseAnalytic.html  classSolvePoseCVX-members.html  classSolvePoseCVX.html  classes.html  common_8h.html  common_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  structSolverSettings-members.html  structSolverSettings.html
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_69.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  classes_69.js  classes_70.js  classes_73.js  files_69.js  files_70.js  files_73.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_67.js  functions_69.js  functions_6d.js  functions_70.js  functions_73.js  functions_7a.js  functions_7e.js  search.js  typedefs_64.js  typedefs_70.js  variables_61.js  variables_63.js  variables_64.js  variables_65.js  variables_69.js  variables_6d.js  variables_70.js  (+1 more)
doc/latex/: ICP_8cpp.tex  ICP_8h.tex  PoseEstimate_8cpp.tex  PoseEstimate_8h.tex  SolvePoseAnalytic_8cpp.tex  SolvePoseAnalytic_8h.tex  SolvePoseCVX_8cpp.tex  SolvePoseCVX_8h.tex  annotated.tex  bunny_8cpp.tex  classICP.tex  classPoseEstimate.eps  classPoseEstimate.tex  classSolvePoseAnalytic.eps  classSolvePoseAnalytic.tex  classSolvePoseCVX.eps  classSolvePoseCVX.tex  common_8h.tex  doxygen.sty  files.tex  hierarchy.tex  refman.tex  structSolverSettings.tex
examples/: CMakeLists.txt  bunny.cpp  freiburg.cpp  read_bunny.h  read_freiburg.h
examples/data/bunny/: bun000.ply  bun045.ply  bun090.ply  bun180.ply  bun270.ply  bun315.ply  bunny.m  bunny_faces.txt  chin.ply  ear_back.ply  top2.ply  top3.ply
examples/data/freiburg/: .gitignore  depthToPC.m  reconstruct_single.m  subsample_pc.m
examples/data/velodyne/: velodyne_scan_00200.csv  velodyne_scan_00220.csv
matlab/: Correspondence.m  EstPose2D.m  EstPose2DL1.m  EstPose3D.m  EstPose3DL1.m  EstPoseP2Plane.m  EstPoseP2PlaneL1.m  ISE3.m  ISE3_basic.m
matlab/Examples/: ADMM_bunny.m  Bunny.m  Craft_dual_ascent.m  Ex_2D_Beacons.m  Sine_Surface.m
matlab/emb_2d/: csolve.m  csolve.mexmaci64  cvxsolve.m
matlab/emb_2d/cvxgen/: Makefile  csolve.c  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
matlab/emb_2d_l1/: cvxsolve.m
matlab/examples/: Bunny_rot.m  Bunny_z.m  Velodyne.m  bunny_vertices.txt  import_csv_pc.m  init_z2so.m
matlab/parallel/: adjoint_so.m  proj_spectra.m  projsplx.m  z2so.m
src/: CMakeLists.txt  ICP.cpp  ICP.h  PoseEstimate.cpp  PoseEstimate.h  SolvePoseAnalytic.cpp  SolvePoseAnalytic.h  SolvePoseCVX.cpp  SolvePoseCVX.h  common.h
(+17 files in other folders)
